# modggl

./: README.md
modggl/: .env  .env.local.example  Cargo.toml  Dockerfile  docker-compose.dev.yaml
modggl/.devcontainer/: Dockerfile  devcontainer.json
modggl/src/: features.rs  lib.rs  main.rs  services.rs  utils.rs
modggl/src/features/: modification.rs
modggl/src/features/modification/: application.rs  controller.rs  presenter.rs  repository.rs
modggl/src/features/modification/application/: domain.rs  port.rs  usecase.rs
modggl/src/features/modification/application/domain/: entry.rs  entry_comparator.rs  entry_logger.rs  entry_reviser.rs
modggl/src/features/modification/application/domain/entry/: entry.rs  entry_client.rs  entry_description.rs  entry_duration.rs  entry_end.rs  entry_id.rs  entry_list.rs  entry_period.rs  entry_project.rs  entry_since.rs  entry_start.rs  entry_tag.rs  entry_tag_list.rs  entry_until.rs  entry_updated.rs  test_utils.rs
modggl/src/features/modification/application/port/: incoming.rs  outgoing.rs
modggl/src/features/modification/application/usecase/: modify_entry_interactor.rs
modggl/src/features/modification/controller/: modify.rs  modify_entry_controller.rs
modggl/src/features/modification/presenter/: entry_modified_slack_presenter.rs
modggl/src/features/modification/repository/: entry_data_model.rs  entry_mock_toggl_repository.rs  entry_request_model.rs  entry_toggl_repository.rs  mock_toggl_repository.rs  toggl_repository.rs
modggl/src/routes/: config.rs
modggl/src/services/: env_service.rs  logger_service.rs
(+33 files in other folders)
