[package]
name = "modggl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "3.3.3"
async-trait = "0.1.52"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.14"
rstest = "0.12.0"
serde = "1"
serde_json = "1"
