[package]
name = "modggl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = "4.0.0-beta.20"
async-trait = "0.1.52"
chrono = "0.4.19"
chrono-tz = "0.6.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
openssl = { version = "0.10", features = ["vendored"] }
rstest = "0.12.0"
reqwest = { version = "0.11.9", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.15.0", features = ["full"] }
url = "2.2.2"
